7/31 縮短js程式碼，js排版

--- a/css/all.css
+++ b/css/all.css
@@ -192,6 +192,9 @@ section p {
 }
 
 section .TodoList {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 10px 0;
   width: 60%;
   position: relative;
